--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,24 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "aoc-2025"
 version = "0.1.0"
-description = "Answerrs"
+description = "Answers"
 authors = [
   {name = "Guillaume Horent", email = "guillaume.horent@gmail.com"},
 ]
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "loguru>=0.7.3",
     "numpy>=2.2.6",
     "pandas>=2.3.3",
     "pre-commit>=4.5.1",
     "pytest>=9.0.2",
     "ruff>=0.14.10",
 ]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/aoc_solutions"]
