--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pre-commit>=4.5.1",
     "pytest>=9.0.2",
     "ruff>=0.14.10",
+    "scipy>=1.15.3",
 ]
 
 [tool.hatch.build.targets.wheel]
